--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 {erl_opts, [debug_info]}.
 {deps, [
-  {aspike_protocol, {git, "git@github.com:vsavkov/aspike-protocol.git", {tag, "v0.1.0"}}},
-  {shackle, {git, "ssh://git@github.com/lpgauth/shackle.git", {tag, "0.6.19"}}}
+  {aspike_protocol, {git, "git@github.com:adgear/aspike-protocol.git", {tag, "v0.1.0"}}},
+  {shackle, {git, "git@github.com:adgear/erlang-shackle.git", {tag, "1.2.10"}}}
 ]}.
